🧪 Refactor ChatControllerTest with Mockito and improved test scenarios